inou/prp/tests/errors/attr_before_type.prp
/*
:name: attr_before_type
:type: error
:error: syntax
:help: does not parse
*/

// A write-side attribute bracket comes AFTER the type: `p:u8:[debug="x"]`.
// The old `p::[debug="x"] :u8` ordering no longer parses; without this check
// the recovery would silently drop the `:u8` type.

const p::[debug="trace"] :u8 = 42 // locate_error_here
cassert(p == 42)
